2003-07-23  Federico Mena Quintero  <federico@ximian.com>

	* bonobo/bonobo-socket.c (bonobo_socket_instance_init): Create a
	private structure for the socket.
	(bonobo_socket_finalize): Free the private structure.
	(toplevel_set_focus_cb): New callback for GtkWindow::set_focus().
	We use this to keep track of the focused widget and
	activate/deactivate the control frame as appropriate --- our
	focus_in/out handlers will not be called if the embedded plug is
	in-process.
	(bonobo_socket_hierarchy_changed): New handler for
	GtkWidget::hierarchy_changed().  We must monitor the focused
	widget on our toplevel, so we pick up toplevel changes here.

2003-07-09  Michael Meeks  <michael@ximian.com>

	* doc/api/tmpl/bonobo-widget.sgml: fix docs.

2003-06-10  Michael Meeks  <michael@ximian.com>

	* Version 2.3.3

2003-06-10  Michael Meeks  <michael@ximian.com>

	* tests/control/test-control.c (test_gtk_weakrefs):
	instantiate a button to test, not a base GTK_OBJECT

2003-06-10  Michael Meeks  <michael@ximian.com>

	* doc/api/Makefile.am (INCLUDES): setup right.

	* bonobo/Makefile.am: fix write-protected srcdir horrors.

	* samples/container/Makefile.am: dist -ui.xml

2003-06-10  Michael Meeks  <michael@ximian.com>

	* configure.in: require libbonobo >= 2.3.3

	* bonobo/Makefile.am: add -DGDK_MULTIHEAD_SAFE

	* bonobo/bonobo-canvas-component.c
	(impl_Bonobo_Canvas_Component_realize),
	(impl_Bonobo_Canvas_Component_draw): upd.

	* bonobo/bonobo-canvas-item.c (gbi_draw, gbi_realize):
	handle the wid more sanely.

2003-06-10  Morten Welinder  <mortenw@gnome.org>

	* bonobo/bonobo-canvas-component.c
	(impl_Bonobo_Canvas_Component_realize),
	(impl_Bonobo_Canvas_Component_draw),
	* bonobo/bonobo-canvas-item.c
	(impl_Bonobo_Canvas_ComponentProxy_grabFocus),
	* bonobo/bonobo-control-frame.c (bonobo_control_frame_get_remote_window),
	* bonobo/bonobo-control.c (bonobo_control_set_transient_for):
	multi-head fixes.

	* bonobo/bonobo-plug.c (bonobo_plug_button_event) 